# pyproject.toml file for 12.2 LTS ML (includes Apache Spark 3.3.2, GPU, Scala 2.12)

[project]
name = "constraint-env-12-2-x-gpu-ml-scala2-12"
version = "0.1.0"
requires-python = "==3.9.*"

[tool.uv]
# Omitted packages (not included in constraints because they cannot be resolved):
#   - fasttext
#   - mleap
#   - mlflow-skinny

constraint-dependencies = [
    "absl-py==1.0.0",
    "argon2-cffi==21.3.0",
    "argon2-cffi-bindings==21.2.0",
    "astor==0.8.1",
    "asttokens==2.0.5",
    "astunparse==1.6.3",
    "attrs==21.4.0",
    "azure-core==1.26.3",
    "azure-cosmos==4.2.0",
    "backcall==0.2.0",
    "backports-entry-points-selectable==1.2.0",
    "bcrypt==3.2.0",
    "beautifulsoup4==4.11.1",
    "black==22.3.0",
    "bleach==4.1.0",
    "blis==0.7.9",
    "boto3==1.21.32",
    "botocore==1.24.32",
    "cachetools==4.2.2",
    "catalogue==2.0.8",
    "category-encoders==2.5.1.post0",
    "certifi==2021.10.8",
    "cffi==1.15.0",
    "chardet==4.0.0",
    "charset-normalizer==2.0.4",
    "click==8.0.4",
    "cloudpickle==2.0.0",
    "cmdstanpy==1.1.0",
    "confection==0.0.4",
    "configparser==5.2.0",
    "convertdate==2.4.0",
    "cryptography==3.4.8",
    "cycler==0.11.0",
    "cymem==2.0.7",
    "cython==0.29.28",
    "databricks-automl-runtime==0.2.15",
    "databricks-cli==0.17.4",
    "databricks-feature-store==0.10.1",
    "dbl-tempo==0.1.12",
    "debugpy==1.5.1",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "dill==0.3.4",
    "diskcache==5.4.0",
    "distlib==0.3.6",
    "distro==1.4.0",
    "docstring-to-markdown==0.11",
    "entrypoints==0.4",
    "ephem==4.1.4",
    "executing==0.8.3",
    "facets-overview==1.0.0",
    "fastjsonschema==2.16.2",
    "filelock==3.6.0",
    "flask==1.1.2",
    "flatbuffers==23.1.21",
    "fonttools==4.25.0",
    "fsspec==2022.2.0",
    "future==0.18.2",
    "gast==0.4.0",
    "gitdb==4.0.10",
    "gitpython==3.1.27",
    "google-auth==1.33.0",
    "google-auth-oauthlib==0.4.6",
    "google-pasta==0.2.0",
    "grpcio==1.42.0",
    "gunicorn==20.1.0",
    "gviz-api==1.10.0",
    "h5py==3.6.0",
    "hijri-converter==2.2.4",
    "holidays==0.18",
    "horovod==0.27.0",
    "htmlmin==0.1.12",
    "huggingface-hub==0.12.0",
    "idna==3.3",
    "imagehash==4.3.1",
    "imbalanced-learn==0.10.1",
    "importlib-metadata==4.11.3",
    "ipykernel==6.15.3",
    "ipython==8.5.0",
    "ipython-genutils==0.2.0",
    "ipywidgets==7.7.2",
    "isodate==0.6.1",
    "itsdangerous==2.0.1",
    "jedi==0.18.1",
    "jinja2==2.11.3",
    "jmespath==0.10.0",
    "joblib==1.1.1",
    "joblibspark==0.5.1",
    "jsonschema==4.4.0",
    "jupyter-client==6.1.12",
    "jupyter-core==4.11.2",
    "jupyterlab-pygments==0.1.2",
    "jupyterlab-widgets==1.0.0",
    "keras==2.11.0",
    "kiwisolver==1.3.2",
    "korean-lunar-calendar==0.3.1",
    "langcodes==3.3.0",
    "libclang==15.0.6.1",
    "lightgbm==3.3.4",
    "llvmlite==0.38.0",
    "lunarcalendar==0.0.9",
    "mako==1.2.0",
    "markdown==3.3.4",
    "markupsafe==2.0.1",
    "matplotlib==3.5.1",
    "matplotlib-inline==0.1.2",
    "mccabe==0.7.0",
    "mistune==0.8.4",
    "mlflow-skinny==2.12.2",
    "multimethod==1.9.1",
    "murmurhash==1.0.9",
    "mypy-extensions==0.4.3",
    "nbclient==0.5.13",
    "nbconvert==6.4.4",
    "nbformat==5.3.0",
    "nest-asyncio==1.5.5",
    "networkx==2.7.1",
    "nltk==3.7",
    "nodeenv==1.7.0",
    "notebook==6.4.8",
    "numba==0.55.1",
    "numpy==1.21.5",
    "oauthlib==3.2.0",
    "opt-einsum==3.3.0",
    "packaging==24.2",
    "pandas==1.4.2",
    "pandas-profiling==3.6.2",
    "pandocfilters==1.5.0",
    "paramiko==2.9.2",
    "parso==0.8.3",
    "pathspec==0.9.0",
    "pathy==0.10.1",
    "patsy==0.5.2",
    "petastorm==0.12.1",
    "pexpect==4.8.0",
    "phik==0.12.3",
    "pickleshare==0.7.5",
    "pillow==9.0.1",
    "platformdirs==2.6.2",
    "plotly==5.6.0",
    "pluggy==1.0.0",
    "pmdarima==2.0.2",
    "preshed==3.0.8",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.20",
    "prophet==1.1.1",
    "protobuf==3.19.4",
    "psutil==5.8.0",
    "psycopg2==2.9.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "py4j==0.10.9.7",
    "pyarrow==7.0.0",
    "pyarrow-hotfix==0.5",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pybind11==2.10.3",
    "pycparser==2.21",
    "pydantic==1.10.2",
    "pyflakes==2.5.0",
    "pygments==2.11.2",
    "pyjwt==2.6.0",
    "pymeeus==0.5.12",
    "pynacl==1.5.0",
    "pyodbc==4.0.32",
    "pyparsing==3.0.4",
    "pyright==1.1.283",
    "pyrsistent==0.18.0",
    "pyspark==3.5.7",
    "python-dateutil==2.8.2",
    "python-editor==1.0.4",
    "python-lsp-jsonrpc==1.0.0",
    "python-lsp-server==1.6.0",
    "pytz==2021.3",
    "pywavelets==1.3.0",
    "pyyaml==6.0",
    "pyzmq==22.3.0",
    "regex==2022.3.15",
    "requests==2.27.1",
    "requests-oauthlib==1.3.1",
    "requests-unixsocket==0.2.0",
    "rope==0.22.0",
    "rsa==4.7.2",
    "s3transfer==0.5.0",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "seaborn==0.11.2",
    "send2trash==1.8.0",
    "setuptools==80.9.0",
    "setuptools-git==1.2",
    "shap==0.41.0",
    "simplejson==3.17.6",
    "six==1.16.0",
    "slicer==0.0.7",
    "smart-open==5.2.1",
    "smmap==5.0.0",
    "soupsieve==2.3.1",
    "spacy==3.4.4",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.4",
    "spark-tensorflow-distributor==1.0.0",
    "sqlparse==0.4.2",
    "srsly==2.4.5",
    "ssh-import-id==5.10",
    "stack-data==0.2.0",
    "statsmodels==0.13.2",
    "tabulate==0.8.9",
    "tangled-up-in-unicode==0.2.0",
    "tenacity==8.0.1",
    "tensorboard==2.11.2",
    "tensorboard-data-server==0.6.1",
    "tensorboard-plugin-profile==2.11.1",
    "tensorboard-plugin-wit==1.8.1",
    "tensorflow==2.11.1",
    "tensorflow-estimator==2.11.0",
    "tensorflow-io-gcs-filesystem==0.30.0",
    "termcolor==2.2.0",
    "terminado==0.13.1",
    "testpath==0.5.0",
    "thinc==8.1.7",
    "threadpoolctl==2.2.0",
    "tokenize-rt==4.2.1",
    "tokenizers==0.13.2",
    "tomli==1.2.2",
    "torch==1.13.1+cu117",
    "torchvision==0.14.1+cu117",
    "tornado==6.1",
    "tqdm==4.64.0",
    "traitlets==5.1.1",
    "transformers==4.25.1",
    "typeguard==2.13.3",
    "typer==0.7.0",
    "typing-extensions==4.1.1",
    "ujson==5.1.0",
    "urllib3==1.26.9",
    "virtualenv==20.8.0",
    "visions==0.7.5",
    "wasabi==0.10.1",
    "wcwidth==0.2.5",
    "webencodings==0.5.1",
    "websocket-client==0.58.0",
    "werkzeug==2.0.3",
    "whatthepatch==1.0.4",
    "wheel==0.45.1",
    "widgetsnbextension==3.6.1",
    "wrapt==1.12.1",
    "xgboost==1.7.2",
    "yapf==0.31.0",
    "zipp==3.7.0",
]

# PyTorch index configuration
[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu117" },
]
torchvision = [
    { index = "pytorch-cu117" },
]
