# pyproject.toml file for Databricks Serverless environment version 2

[project]
name = "constraint-env-serverless-v2"
version = "0.1.0"
requires-python = "==3.11.*"

[tool.uv]
# Omitted packages (pre-installed in DBR but cannot be compiled locally):
#   - google-api-core
#   - mlflow-skinny

constraint-dependencies = [
    "anyio==4.11.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==2.0.5",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "azure-core==1.32.0",
    "azure-storage-blob==12.19.1",
    "azure-storage-file-datalake==12.14.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "black==23.3.0",
    "bleach==6.3.0",
    "blinker==1.4",
    "boto3==1.34.39",
    "botocore==1.34.39",
    "cachetools==5.5.0",
    "certifi==2023.7.22",
    "cffi==1.15.1",
    "chardet==4.0.0",
    "charset-normalizer==2.0.4",
    "click==8.0.4",
    "cloudpickle==3.0.0",
    "comm==0.1.2",
    "contourpy==1.0.5",
    "cryptography==41.0.3",
    "cycler==0.11.0",
    "cython==0.29.32",
    "databricks-connect==15.4.16",
    "databricks-sdk==0.40.0",
    "debugpy==1.6.7",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "dill==0.3.6",
    "distlib==0.3.9",
    "distro==1.7.0",
    "entrypoints==0.4",
    "executing==0.8.3",
    "facets-overview==1.1.1",
    "fastjsonschema==2.21.2",
    "filelock==3.13.4",
    "fonttools==4.25.0",
    "fqdn==1.5.1",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "google-api-core==2.28.1",
    "google-auth==2.35.0",
    "google-cloud-core==2.4.1",
    "google-cloud-storage==2.18.2",
    "google-crc32c==1.6.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.65.0",
    "grpcio==1.69.0",
    "grpcio-status==1.69.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.20.2",
    "httpx==0.28.1",
    "idna==3.4",
    "importlib-metadata==6.0.0",
    "ipyflow-core==0.0.201",
    "ipykernel==6.28.0",
    "ipython==8.25.0",
    "ipython-genutils==0.2.0",
    "ipywidgets==7.7.2",
    "isodate==0.7.2",
    "isoduration==20.11.0",
    "jedi==0.18.1",
    "jeepney==0.7.1",
    "jinja2==3.1.6",
    "jmespath==0.10.0",
    "joblib==1.2.0",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==7.4.9",
    "jupyter-core==5.3.0",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.10",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==1.1.11",
    "keyring==23.5.0",
    "kiwisolver==1.4.4",
    "lark==1.3.1",
    "launchpadlib==1.10.16",
    "lazr-restfulclient==0.14.4",
    "lazr-uri==1.0.6",
    "markupsafe==3.0.3",
    "matplotlib==3.7.2",
    "matplotlib-inline==0.1.6",
    "mistune==3.1.4",
    "more-itertools==8.10.0",
    "mypy-extensions==0.4.3",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.5.6",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numpy==1.23.5",
    "oauthlib==3.2.0",
    "overrides==7.7.0",
    "packaging==23.2",
    "pandas==1.5.3",
    "pandocfilters==1.5.1",
    "parso==0.8.3",
    "pathspec==0.10.3",
    "patsy==0.5.3",
    "pexpect==4.8.0",
    "pillow==10.3.0",
    "platformdirs==3.10.0",
    "plotly==5.9.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.48",
    "proto-plus==1.25.0",
    "protobuf==5.29.3",
    "psutil==5.9.0",
    "psycopg2==2.9.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "py4j==0.10.9.7",
    "pyarrow==14.0.1",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pyccolo==0.0.65",
    "pycparser==2.21",
    "pydantic==1.10.6",
    "pygments==2.15.1",
    "pyjwt==2.3.0",
    "pyodbc==4.0.39",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "python-json-logger==4.0.0",
    "python-lsp-jsonrpc==1.1.2",
    "pytz==2022.7",
    "pyyaml==6.0",
    "pyzmq==25.1.2",
    "referencing==0.37.0",
    "requests==2.31.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.28.0",
    "rsa==4.9",
    "s3transfer==0.10.3",
    "scikit-learn==1.3.0",
    "scipy==1.11.1",
    "seaborn==0.12.2",
    "secretstorage==3.3.1",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlparse==0.5.1",
    "ssh-import-id==5.11",
    "stack-data==0.2.0",
    "statsmodels==0.14.0",
    "tenacity==8.2.2",
    "terminado==0.18.1",
    "threadpoolctl==2.2.0",
    "tinycss2==1.4.0",
    "tokenize-rt==4.2.1",
    "tornado==6.3.2",
    "traitlets==5.13.0",
    "typing-extensions==4.10.0",
    "tzdata==2022.1",
    "ujson==5.4.0",
    "uri-template==1.3.0",
    "urllib3==1.26.16",
    "virtualenv==20.26.6",
    "wadllib==1.3.6",
    "wcwidth==0.2.5",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "wheel==0.45.1",
    "widgetsnbextension==3.6.10",
    "zipp==3.11.0",
    "zstandard==0.23.0",
]
