# pyproject.toml file for Databricks Serverless environment version 3

[project]
name = "constraint-env-serverless-v3"
version = "0.1.0"
requires-python = "==3.12.*"

[tool.uv]
constraint-dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.2.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==2.0.5",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "azure-core==1.33.0",
    "azure-storage-blob==12.23.0",
    "azure-storage-file-datalake==12.17.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "black==24.4.2",
    "bleach==6.3.0",
    "blinker==1.7.0",
    "boto3==1.34.69",
    "botocore==1.34.69",
    "cachetools==5.3.3",
    "certifi==2024.6.2",
    "cffi==1.16.0",
    "chardet==4.0.0",
    "charset-normalizer==2.0.4",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "comm==0.2.1",
    "contourpy==1.2.0",
    "cryptography==42.0.5",
    "cycler==0.11.0",
    "cython==3.0.11",
    "databricks-connect==16.4.8",
    "databricks-sdk==0.49.0",
    "debugpy==1.6.7",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "dill==0.3.8",
    "distlib==0.3.8",
    "distro==1.9.0",
    "executing==0.8.3",
    "facets-overview==1.1.1",
    "fastapi==0.115.12",
    "fastjsonschema==2.21.2",
    "filelock==3.15.4",
    "fonttools==4.51.0",
    "fqdn==1.5.1",
    "gitdb==4.0.11",
    "gitpython==3.1.37",
    "google-api-core==2.20.0",
    "google-auth==2.38.0",
    "google-cloud-core==2.4.3",
    "google-cloud-storage==3.1.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.69.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httplib2==0.20.4",
    "httpx==0.28.1",
    "idna==3.7",
    "importlib-metadata==7.0.1",
    "iniconfig==1.1.1",
    "ipyflow-core==0.0.206",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "ipython-genutils==0.2.0",
    "ipywidgets==7.7.2",
    "isodate==0.7.2",
    "isoduration==20.11.0",
    "jedi==0.19.1",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.0",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.10",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==1.1.11",
    "kiwisolver==1.4.4",
    "lark==1.3.1",
    "launchpadlib==1.11.0",
    "lazr-restfulclient==0.14.6",
    "lazr-uri==1.0.6",
    "markupsafe==3.0.3",
    "matplotlib==3.8.4",
    "matplotlib-inline==0.1.6",
    "mistune==3.1.4",
    "mlflow-skinny==2.21.3",
    "mypy-extensions==1.0.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "opentelemetry-api==1.31.1",
    "opentelemetry-sdk==1.31.1",
    "opentelemetry-semantic-conventions==0.52b1",
    "packaging==24.1",
    "pandas==1.5.3",
    "pandocfilters==1.5.1",
    "parso==0.8.3",
    "pathspec==0.10.3",
    "patsy==0.5.6",
    "pexpect==4.8.0",
    "pillow==10.3.0",
    "platformdirs==3.10.0",
    "plotly==5.22.0",
    "pluggy==1.5.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.43",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "psutil==5.9.0",
    "psycopg2==2.9.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "py4j==0.10.9.9",
    "pyarrow==15.0.2",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pyccolo==0.0.68",
    "pycparser==2.21",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pygments==2.15.1",
    "pyjwt==2.7.0",
    "pyodbc==5.0.1",
    "pyparsing==3.0.9",
    "pytest==8.3.0",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "python-lsp-jsonrpc==1.1.2",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "pyzmq==25.1.2",
    "referencing==0.37.0",
    "requests==2.32.2",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.28.0",
    "rsa==4.9",
    "s3transfer==0.10.4",
    "scikit-learn==1.4.2",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "setuptools==75.8.0",
    "six==1.16.0",
    "smmap==5.0.0",
    "sniffio==1.3.0",
    "soupsieve==2.8",
    "sqlparse==0.5.3",
    "ssh-import-id==5.11",
    "stack-data==0.2.0",
    "starlette==0.46.1",
    "statsmodels==0.14.2",
    "tenacity==8.2.2",
    "terminado==0.18.1",
    "threadpoolctl==2.2.0",
    "tinycss2==1.4.0",
    "tokenize-rt==4.2.1",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "typing-extensions==4.11.0",
    "tzdata==2024.1",
    "ujson==5.10.0",
    "uri-template==1.3.0",
    "urllib3==2.2.2",
    "uvicorn==0.34.0",
    "virtualenv==20.29.2",
    "wadllib==1.3.6",
    "wcwidth==0.2.5",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "wheel==0.45.1",
    "widgetsnbextension==3.6.10",
    "wrapt==1.14.1",
    "zipp==3.17.0",
    "zstandard==0.23.0",
]
